unpackaged/main/default/objects/Enablement_Milestone__c/Enablement_Milestone__c.object-meta.xml
<CustomObject>
    <label>Enablement Milestone</label>
    <nameField>
        <label>Enablement Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enablement Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>