unpackaged/main/default/objects/Enablement_Milestone__c/fields/Assignee_Department__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Department__c</fullName>
    <label>Assignee Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Department</valueSetName>
    </valueSet>
</CustomField>