unpackaged/main/default/objects/Enablement_Milestone__c/fields/Assignee_Manager_Role__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Manager_Role__c</fullName>
    <label>Assignee Manager Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>