unpackaged/main/default/objects/Enablement_Milestone__c/fields/Assignee_Role__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Role__c</fullName>
    <label>Assignee Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>