unpackaged/main/default/objects/Enablement_Milestone__c/fields/Assignee_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Subregion__c</fullName>
    <label>Assignee Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Subregion</valueSetName>
    </valueSet>
</CustomField>