unpackaged/main/default/objects/Enablement_Milestone__c/fields/Assignee_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Subteam__c</fullName>
    <label>Assignee Subteam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Subteam</valueSetName>
    </valueSet>
</CustomField>