unpackaged/main/default/objects/Enablement_Milestone__c/fields/Earn_Date__c.field-meta.xml
<CustomField>
    <fullName>Earn_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Earn Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>