unpackaged/main/default/objects/Enablement_Milestone__c/fields/Earn_Month__c.field-meta.xml
<CustomField>
    <fullName>Earn_Month__c</fullName>
    <formula>DATE(YEAR(Earn_Date__c),MONTH(Earn_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earn Month</label>
    <type>Date</type>
</CustomField>