unpackaged/main/default/objects/Enablement_Milestone__c/fields/Earn_Year__c.field-meta.xml
<CustomField>
    <fullName>Earn_Year__c</fullName>
    <formula>TEXT(YEAR(Earn_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earn Year</label>
    <type>Text</type>
</CustomField>