unpackaged/main/default/objects/Enablement_Milestone__c/fields/Score_Percent__c.field-meta.xml
<CustomField>
    <fullName>Score_Percent__c</fullName>
    <formula>IF(ISBLANK(Score_Possible__c),NULL,Score_Earned__c/Score_Possible__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score: Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>