unpackaged/main/default/objects/Enablement_Milestone__c/fields/Score_Possible__c.field-meta.xml
<CustomField>
    <fullName>Score_Possible__c</fullName>
    <label>Score: Possible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>