unpackaged/main/default/objects/Enablement_Milestone__c/fields/Submitted_On_Time__c.field-meta.xml
<CustomField>
    <fullName>Submitted_On_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted On Time?</label>
    <type>Checkbox</type>
</CustomField>