unpackaged/main/default/objects/Enablement_Milestone__c/validationRules/assignee_required.validationRule-meta.xml
<ValidationRule>
    <fullName>assignee_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Assignee__c)</errorConditionFormula>
    <errorMessage>Assignee is required</errorMessage>
</ValidationRule>