unpackaged/main/default/objects/Enablement_Milestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assignee__c</columns>
    <columns>Submitted_On_Time__c</columns>
    <columns>Earn_Date__c</columns>
    <columns>Score_Earned__c</columns>
    <columns>Score_Possible__c</columns>
    <columns>Comments__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Asset_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>